Procurement-Dashboard/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghb-dashboard-ingress
  namespace: ghb-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy_connect_timeout: "300"
    nginx.ingress.kubernetes.io/send_timeout: "300"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ghb-dashboard.staging.codehard.co.th"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,language,token-app,userid"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "1728000"
    nginx.ingress.kubernetes.io/server-snippet: |
      gzip on;
      gzip_min_length 1024;
      gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
spec:
  tls:
    - hosts:
        - ghb-dashboard.staging.codehard.co.th
      secretName: ghb-dashboard-tls-secret
  rules:
    - host: ghb-dashboard.staging.codehard.co.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghb-dashboard-frontend-service
                port:
                  number: 80
